Create a Carousel page

--- a/XAMLInXamarinForms/XAMLInXamarinForms/XAMLInXamarinForms.csproj
+++ b/XAMLInXamarinForms/XAMLInXamarinForms/XAMLInXamarinForms.csproj
@@ -16,12 +16,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\Fitness\FitnessView.xaml.cs">
+      <DependentUpon>FitnessView.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Nutrition\LunchView.xaml.cs">
       <DependentUpon>LunchView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Views\Fitness\FitnessView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Fitness\FridayView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
